--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: We Teach! Everyone can teach # your name (or website title) here
+  logo: "/images/We TEACH.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Are you looking to explore alternative approaches that can address these challenges and provide 
+  a more holistic educational experience for students in rural areas? Let's delve deeper into the innovative solutions that are reshaping education in underserved regions.
   <br><br>
   Second description 
   <br><br>
